--- a/energie-interne.html
+++ b/energie-interne.html
@@ -11,8 +11,8 @@ d’énergie interne (énergie élastique), qui peut être restituée à la flè
 <canvas id="arcSim" width="520" height="260"></canvas>
 
 <label>
-Tension de l’arc (travail appliqué)
-<input type="range" id="pull" min="0" max="100" value="0" oninput="updateArc()">
+Tension de l’arc
+<input type="range" id="pull" min="0" max="100" value="0">
 </label>
 
 <p>
@@ -20,9 +20,9 @@ Tension de l’arc (travail appliqué)
 <b><span id="Earc">0</span> J</b>
 </p>
 
-<button onclick="shoot()">▶ Tirer</button>
-<button onclick="pause()">⏸ Pause / Reprendre</button>
-<button onclick="resetSim()">🔁 Recommencer</button>
+<button id="shootBtn">▶ Tirer</button>
+<button id="pauseBtn">⏸ Pause</button>
+<button id="resetBtn">🔁 Recommencer</button>
 
 </div>
 
@@ -30,18 +30,13 @@ Tension de l’arc (travail appliqué)
 const canvas = document.getElementById("arcSim");
 const ctx = canvas.getContext("2d");
 
-let arrowX = 240;
-let flying = false;
-let paused = false;
-let interval = null;
+let state = "idle"; // idle | flying | paused
+let arrowX = 260;
+let speed = 0;
+let energy = 0;
+let animationId = null;
 
-// particules microscopiques de l’arc
-let particles = [];
-for(let i=0;i<12;i++){
-  particles.push({x:120+i*8, y:130});
-}
-
-function drawArc(bend, showArrow=true){
+function draw(bend){
   ctx.clearRect(0,0,520,260);
 
   // ARC
@@ -61,13 +56,14 @@ function drawArc(bend, showArrow=true){
   ctx.lineWidth=2;
   ctx.stroke();
 
-  // PARTICULES MICRO
-  ctx.fillStyle="#1e88e5";
-  particles.forEach((pt,i)=>{
-    ctx.beginPath();
-    ctx.arc(pt.x - bend*0.15, pt.y + Math.sin(i)*4, 4, 0, Math.PI*2);
-    ctx.fill();
-  });
+  // FLÈCHE
+  ctx.fillStyle="black";
+  ctx.fillRect(arrowX,125,70,6);
+  ctx.beginPath();
+  ctx.moveTo(arrowX+70,125);
+  ctx.lineTo(arrowX+85,128);
+  ctx.lineTo(arrowX+70,131);
+  ctx.fill();
 
   // BARRE ÉNERGIE
   ctx.fillStyle="#ddd";
@@ -77,203 +73,67 @@ function drawArc(bend, showArrow=true){
   ctx.strokeRect(360,200,120,15);
   ctx.fillStyle="black";
   ctx.fillText("Énergie interne",360,195);
+}
 
-  // FLÈCHE
-  if(showArrow){
-    ctx.fillStyle="black";
-    ctx.fillRect(arrowX,125,70,6);
-    ctx.beginPath();
-    ctx.moveTo(arrowX+70,125);
-    ctx.lineTo(arrowX+85,128);
-    ctx.lineTo(arrowX+70,131);
-    ctx.fill();
+function updateIdle(){
+  const p = pull.value;
+  const bend = p * 0.6;
+  energy = 0.02 * p * p;
+  document.getElementById("Earc").innerText = energy.toFixed(1);
+  arrowX = 120 + bend + 60;
+  draw(bend);
+}
+
+pull.addEventListener("input", () => {
+  if(state === "idle") updateIdle();
+});
+
+document.getElementById("shootBtn").onclick = () => {
+  if(state !== "idle") return;
+  state = "flying";
+  speed = pull.value / 5;
+  animate();
+};
+
+document.getElementById("pauseBtn").onclick = () => {
+  if(state === "flying"){
+    state = "paused";
+  } else if(state === "paused"){
+    state = "flying";
+    animate();
+  }
+};
+
+document.getElementById("resetBtn").onclick = () => {
+  cancelAnimationFrame(animationId);
+  state = "idle";
+  pull.value = 0;
+  energy = 0;
+  document.getElementById("Earc").innerText = "0";
+  arrowX = 260;
+  updateIdle();
+};
+
+function animate(){
+  if(state !== "flying") return;
+
+  arrowX += speed;
+  draw(0);
+
+  if(arrowX < 520){
+    animationId = requestAnimationFrame(animate);
+  } else {
+    state = "idle";
   }
 }
 
-let energy = 0;
-
-function updateArc(){
-  if(flying) return;
-
-  let p = pull.value;
-  let bend = p*0.6;
-  energy = 0.02*p*p;
-  document.getElementById("Earc").innerText = energy.toFixed(1);
-  arrowX = 120 + bend + 60;
-
-  drawArc(bend,true);
-}
-
-updateArc();
-
-function shoot(){
-  if(flying) return;
-  flying = true;
-  paused = false;
-
-  let speed = pull.value/5;
-  let bend = pull.value*0.6;
-
-  interval = setInterval(()=>{
-    if(paused) return;
-
-    arrowX += speed;
-    drawArc(0,true);
-
-    if(arrowX > 520){
-      clearInterval(interval);
-      flying = false;
-    }
-  },30);
-}
-
-function pause(){
-  paused = !paused;
-}
-
-function resetSim(){
-  clearInterval(interval);
-  flying = false;
-  paused = false;
-  pull.value = 0;
-  energy = 0;
-  arrowX = 240;
-  document.getElementById("Earc").innerText = "0";
-  drawArc(0,true);
-}
+// Initialisation
+updateIdle();
 </script>
 
 <div class="box">
 Le travail exercé sur l’arc est stocké sous forme d’énergie interne élastique.
 Lors du tir, cette énergie est transférée à la flèche sous forme d’énergie cinétique.
-</div>
-
-</section>
-<section id="arc">
-<h2>Déformation d’un objet élastique : arc et flèche</h2>
-
-<p>
-Lorsqu’on tend un arc, le travail exercé provoque sa déformation.
-Cette déformation modifie les interactions microscopiques entre les particules
-de l’arc et entraîne une mise en réserve d’énergie interne (énergie élastique).
-</p>
-
-<div class="sim">
-
-<canvas id="arcSim" width="520" height="260"></canvas>
-
-<label>
-Travail appliqué (tension de l’arc)
-<input type="range" id="pull" min="0" max="100" value="0" oninput="updateArc()">
-</label>
-
-<p>
-Énergie interne stockée :
-<b><span id="Earc">0</span> J</b>
-</p>
-
-<button onclick="releaseArrow()">Relâcher la flèche</button>
-
-</div>
-
-<script>
-const canvas = document.getElementById("arcSim");
-const ctx = canvas.getContext("2d");
-
-let arrowX = 260;
-let released = false;
-
-// particules microscopiques de l’arc
-let particles = [];
-for(let i=0;i<12;i++){
-  particles.push({x:120+i*8, y:130});
-}
-
-function updateArc(){
-  if(released) return;
-
-  const p = pull.value;
-  const bend = p*0.6;
-  const E = 0.02*p*p; // modèle simple d’énergie élastique
-  document.getElementById("Earc").innerText = E.toFixed(1);
-
-  ctx.clearRect(0,0,520,260);
-
-  // ARC (courbure)
-  ctx.beginPath();
-  ctx.moveTo(120,30);
-  ctx.quadraticCurveTo(120-bend,130,120,230);
-  ctx.strokeStyle="brown";
-  ctx.lineWidth=5;
-  ctx.stroke();
-
-  // CORDE
-  ctx.beginPath();
-  ctx.moveTo(120,30);
-  ctx.lineTo(120+bend,130);
-  ctx.lineTo(120,230);
-  ctx.strokeStyle="black";
-  ctx.lineWidth=2;
-  ctx.stroke();
-
-  // FLÈCHE
-  arrowX = 120 + bend + 60;
-  ctx.fillStyle="black";
-  ctx.fillRect(arrowX,125,70,6);
-  ctx.beginPath();
-  ctx.moveTo(arrowX+70,125);
-  ctx.lineTo(arrowX+85,128);
-  ctx.lineTo(arrowX+70,131);
-  ctx.fill();
-
-  // MODÈLE MICROSCOPIQUE (particules de l’arc)
-  ctx.fillStyle="#1e88e5";
-  particles.forEach((pt,i)=>{
-    ctx.beginPath();
-    ctx.arc(pt.x - bend*0.15, pt.y + Math.sin(i)*4, 4, 0, Math.PI*2);
-    ctx.fill();
-  });
-
-  // BARRE D’ÉNERGIE
-  ctx.fillStyle="#ddd";
-  ctx.fillRect(360,200,120,15);
-  ctx.fillStyle="#ff9800";
-  ctx.fillRect(360,200,Math.min(E,120),15);
-  ctx.strokeRect(360,200,120,15);
-  ctx.fillStyle="black";
-  ctx.fillText("Énergie interne",360,195);
-}
-
-updateArc();
-
-function releaseArrow(){
-  if(released) return;
-  released = true;
-
-  let speed = pull.value/4;
-  let interval = setInterval(()=>{
-    ctx.clearRect(0,0,520,260);
-    arrowX += speed;
-
-    // flèche en mouvement
-    ctx.fillRect(arrowX,125,70,6);
-    ctx.beginPath();
-    ctx.moveTo(arrowX+70,125);
-    ctx.lineTo(arrowX+85,128);
-    ctx.lineTo(arrowX+70,131);
-    ctx.fill();
-
-    if(arrowX > 520){
-      clearInterval(interval);
-    }
-  },30);
-}
-</script>
-
-<div class="box">
-Le travail exercé sur l’arc est stocké sous forme d’énergie interne (élastique).
-Lors du relâchement, cette énergie est transférée à la flèche sous forme
-d’énergie cinétique.
 </div>
 
 </section>
