--- a/energie-interne.html
+++ b/energie-interne.html
@@ -2,16 +2,16 @@
 <h2>Déformation d’un objet élastique : arc et flèche</h2>
 
 <p>
-Le travail exercé sur l’arc provoque sa déformation et le stockage
-d’énergie interne (énergie élastique), qui peut être restituée à la flèche.
+Le travail exercé par l’archer sur l’arc provoque sa déformation et le stockage
+d’énergie interne (énergie élastique), qui sera transférée à la flèche.
 </p>
 
 <div class="sim">
 
-<canvas id="arcSim" width="520" height="260"></canvas>
+<canvas id="arcSim" width="600" height="300"></canvas>
 
 <label>
-Tension de l’arc
+Tension de l’arc (travail appliqué)
 <input type="range" id="pull" min="0" max="100" value="0">
 </label>
 
@@ -31,48 +31,83 @@ const canvas = document.getElementById("arcSim");
 const ctx = canvas.getContext("2d");
 
 let state = "idle"; // idle | flying | paused
-let arrowX = 260;
+let arrowX = 280;
 let speed = 0;
 let energy = 0;
 let animationId = null;
 
+function drawArcher(armBack){
+  // tête
+  ctx.beginPath();
+  ctx.arc(480,70,15,0,Math.PI*2);
+  ctx.stroke();
+
+  // corps
+  ctx.beginPath();
+  ctx.moveTo(480,85);
+  ctx.lineTo(480,150);
+  ctx.stroke();
+
+  // jambe
+  ctx.beginPath();
+  ctx.moveTo(480,150);
+  ctx.lineTo(460,200);
+  ctx.lineTo(500,200);
+  ctx.stroke();
+
+  // bras avant (tenant l’arc)
+  ctx.beginPath();
+  ctx.moveTo(480,100);
+  ctx.lineTo(430,120);
+  ctx.stroke();
+
+  // bras arrière (tirant la corde)
+  ctx.beginPath();
+  ctx.moveTo(480,100);
+  ctx.lineTo(430-armBack,120);
+  ctx.stroke();
+}
+
 function draw(bend){
-  ctx.clearRect(0,0,520,260);
+  ctx.clearRect(0,0,600,300);
 
   // ARC
   ctx.beginPath();
-  ctx.moveTo(120,30);
-  ctx.quadraticCurveTo(120-bend,130,120,230);
+  ctx.moveTo(150,40);
+  ctx.quadraticCurveTo(150-bend,150,150,260);
   ctx.strokeStyle="brown";
   ctx.lineWidth=5;
   ctx.stroke();
 
   // CORDE
   ctx.beginPath();
-  ctx.moveTo(120,30);
-  ctx.lineTo(120+bend,130);
-  ctx.lineTo(120,230);
+  ctx.moveTo(150,40);
+  ctx.lineTo(150+bend,150);
+  ctx.lineTo(150,260);
   ctx.strokeStyle="black";
   ctx.lineWidth=2;
   ctx.stroke();
 
   // FLÈCHE
   ctx.fillStyle="black";
-  ctx.fillRect(arrowX,125,70,6);
+  ctx.fillRect(arrowX,145,80,6);
   ctx.beginPath();
-  ctx.moveTo(arrowX+70,125);
-  ctx.lineTo(arrowX+85,128);
-  ctx.lineTo(arrowX+70,131);
+  ctx.moveTo(arrowX+80,145);
+  ctx.lineTo(arrowX+95,148);
+  ctx.lineTo(arrowX+80,151);
   ctx.fill();
+
+  // ARCHER
+  drawArcher(bend*0.3);
 
   // BARRE ÉNERGIE
   ctx.fillStyle="#ddd";
-  ctx.fillRect(360,200,120,15);
+  ctx.fillRect(380,260,150,15);
   ctx.fillStyle="#ff9800";
-  ctx.fillRect(360,200,Math.min(energy,120),15);
-  ctx.strokeRect(360,200,120,15);
+  ctx.fillRect(380,260,Math.min(energy,150),15);
+  ctx.strokeRect(380,260,150,15);
   ctx.fillStyle="black";
-  ctx.fillText("Énergie interne",360,195);
+  ctx.fillText("Énergie interne (arc)",380,255);
 }
 
 function updateIdle(){
@@ -80,7 +115,7 @@ function updateIdle(){
   const bend = p * 0.6;
   energy = 0.02 * p * p;
   document.getElementById("Earc").innerText = energy.toFixed(1);
-  arrowX = 120 + bend + 60;
+  arrowX = 150 + bend + 60;
   draw(bend);
 }
 
@@ -110,7 +145,7 @@ document.getElementById("resetBtn").onclick = () => {
   pull.value = 0;
   energy = 0;
   document.getElementById("Earc").innerText = "0";
-  arrowX = 260;
+  arrowX = 280;
   updateIdle();
 };
 
@@ -120,7 +155,7 @@ function animate(){
   arrowX += speed;
   draw(0);
 
-  if(arrowX < 520){
+  if(arrowX < 600){
     animationId = requestAnimationFrame(animate);
   } else {
     state = "idle";
@@ -132,8 +167,9 @@ updateIdle();
 </script>
 
 <div class="box">
-Le travail exercé sur l’arc est stocké sous forme d’énergie interne élastique.
-Lors du tir, cette énergie est transférée à la flèche sous forme d’énergie cinétique.
+L’archer fournit un travail mécanique en tirant la corde.
+Ce travail est stocké dans l’arc sous forme d’énergie interne élastique,
+puis transféré à la flèche sous forme d’énergie cinétique.
 </div>
 
 </section>
